--- a/CSS_advanced/styles/6-style.css
+++ b/CSS_advanced/styles/6-style.css
@@ -1,4 +1,4 @@
-/* Task 5 - Font Size Setting */
+/* Task 6 - Font Weight Setting */
 
 :root {
     --color-primary: #d73953;
@@ -14,6 +14,8 @@
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
+    --font-weight-regular: 400;
+    --font-weight-bold: 700;
 }
 html {
     scroll-behavior: smooth;
@@ -24,10 +26,12 @@ body {
     color: var(--text-color);
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
+    font-weight: var(--font-weight-regular);
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
 }
 
 a {
