--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -1,7 +1,7 @@
 /* Task 14 - Reset Setting */
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-* {
+.box {
     box-sizing: content-box;
 }
 
