--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -2,7 +2,7 @@
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 .box {
-    box-sizing: content-box;
+    box-sizing: border-box;
 }
 
 html
