--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -1,6 +1,5 @@
-/* Task 14 - Reset Setting */
+/* Task 15 - Reset Setting */
 
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 * {
     box-sizing: border-box;
 }
@@ -60,8 +59,9 @@ button,input
 button,select
 {text-transform:none}
 
-[type=button],[type=reset],[type=submit],button
-{-webkit-appearance:button}
+[type=button],[type=reset],[type=submit],button {
+    -webkit-appearance:button
+}
 
 [type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner
 {border-style:none;padding:0}
@@ -107,5 +107,3 @@ template
 
 [hidden]
 {display:none}
-
-/*# sourceMappingURL=normalize.min.css.map */
