--- a/CSS_advanced/styles/28-style.css
+++ b/CSS_advanced/styles/28-style.css
@@ -471,11 +471,11 @@ a:active {
   position: var(--header-logo-position);
 }
 
-.header-logo > a {
+.header-logo a {
   display: var(--header-logo-link-display);
   position: var(--header-logo-link-position);
-  vertical-align: var(--header-logo-link-top);
-  text-align: var(--header-logo-link-left);
+  top: var(--header-logo-link-top);
+  left: var(--header-logo-link-left);
 }
 
 ul.row {
